--- a/style.css
+++ b/style.css
@@ -36,7 +36,8 @@ body * {
 }
 
 #container {
-  width: 360px;
+  width: 100%;
+  max-width: 580px;
   margin: 56px auto 0px;
   padding: 0 24px;
 }
@@ -69,7 +70,7 @@ body * {
   background: white var(--switch-bg-url) no-repeat center;
   border: 0;
   border-radius: 50%;
-  
+
   position: absolute;
   left: 0;
   z-index: 1;
